# tvdata

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tvdata/: __init__.py  tvdata.py
tests/: test.py
